Zoom gedung direktur

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,21 @@ html {
     white-space: nowrap;
     /* Mencegah teks terpotong */
 }
+
+/* Global style */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+/* Style untuk Map */
+#map {
+    height: 90vh;
+    /* Menyisakan ruang untuk navbar */
+    width: 100%;
+}
