--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,16 @@ html {
 .navbar-brand img {
     height: 45px;
     padding-left: 20px;
+    padding-right: 20px;
+}
+
+.navbar-nav .nav-link {
+    color: white;
+    font-weight: 500;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #e2e6ea;
 }
 
 .bottom-buttons {
@@ -38,7 +48,7 @@ html {
     font-size: 16px;
     border: none;
     cursor: pointer;
-    background-color: #0080ff;
+    background-color: rgb(63, 138, 125);
     color: #ffffff;
     transition: all 0.3s ease;
     border-radius: 50px;
@@ -82,7 +92,6 @@ html {
     border-radius: 0 50px 50px 0;
     /* Aturan untuk dropdown toggle yang ungu */
 }
-
 
 .text-label {
     font-size: 12px;
